apps/project-management/focalboard-Gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: focalboard-gateway
  namespace: pm
  labels:
    app-name: focalboard
    version: "${FOCALBOARD_VERSION}"
    component: project-management-tool
    hostNetwork: "no"
    internal-service: "no"
    managed-by: chynten
    created-by: chynten
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - $FOCALBOARD_DOMAIN
    tls:
      httpsRedirect: true
  - hosts:
      - $FOCALBOARD_DOMAIN
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: focalboard-letsencrypt-certificate
