apps/project-management/focalboard-VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: focalboard-vs
  namespace: pm
  labels:
    app-name: focalboard
    version: "${FOCALBOARD_VERSION}"
    component: project-management-tool
    hostNetwork: "no"
    internal-service: "no"
    managed-by: chynten
    created-by: chynten
spec:
  hosts:
  - "${FOCALBOARD_DOMAIN}"
  gateways:
  - focalboard-gateway
  http:
  - route:
    - destination:
        host: focalboard-svc.nextcloud.svc.cluster.local
        port:
          number: 8000
